deploy/testing/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE_NAME}-${SERVICE_VER}
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      service: ${SERVICE_NAME}-${SERVICE_VER}
  replicas: 1
  template:
    metadata:
      labels:
        service: ${SERVICE_NAME}-${SERVICE_VER}
        logger: nlog
      annotations:
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: ${SERVICE_NAME}-${SERVICE_VER}
        image: ${IMAGE}
        ports:
        - containerPort: ${CONTAINER_PORT}
        volumeMounts:
          - name: ${SERVICE_NAME}-${SERVICE_VER}
            mountPath: /app/appsettings.json
            subPath: appsettings.json
          - name: ${SERVICE_NAME}-${SERVICE_VER}
            mountPath: /app/appsettings_cache.json
            subPath: appsettings_cache.json
      nodeSelector:
      imagePullSecrets:
      - name: registry
      restartPolicy: Always
      volumes:
      - name: ${SERVICE_NAME}-${SERVICE_VER}
        configMap: 
          name: ${SERVICE_NAME}-${SERVICE_VER}
---
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}-${SERVICE_VER}
  namespace: ${NAMESPACE}
spec:
  ports:
  - port: ${CONTAINER_PORT}
    protocol: TCP
  selector:
    service: ${SERVICE_NAME}-${SERVICE_VER}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  ${SERVICE_NAME}-${SERVICE_VER}
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: ${DOMAIN}
    http:
      paths:
      - path: ${SERVICE_PATH}/${SERVICE_VER}/${SERVICE_SHORT_NAME}(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ${SERVICE_NAME}-${SERVICE_VER}
            port:
              number: ${CONTAINER_PORT}
